cambios en el nav

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div class="w-100 d-flex justify-content-between">
                 <div>
                     <i class="fa fa-envelope mx-2"></i>
-                    <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:info@prodart.com">info@prodart.com</a>
+                    <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:info@prodart.com">info@shoesstorecom</a>
                     <i class="fa fa-phone mx-2"></i>
-                    <a class="navbar-sm-brand text-light text-decoration-none" href="tel: 057-320-202-02-02">057-320-202-02-02</a>
+                    <a class="navbar-sm-brand text-light text-decoration-none" href="tel: 057-322-815-08-24">057-322-815-08-24</a>
                 </div>
                 <div>
                     <a class="text-light" href="https://fb.com/templatemo" target="_blank" rel="sponsored"><i class="fab fa-facebook-f fa-sm fa-fw me-2"></i></a>
@@ -318,7 +318,7 @@
                     <ul class="list-unstyled text-light footer-link-list">
                         <li><a class="text-decoration-none" href="compras.html">Sandalias</a></li>
                         <li><a class="text-decoration-none" href="compras.html">Clasicos</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Deportivos/a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Deportivos</a></li>
                         <li><a class="text-decoration-none" href="compras.html">Tacones</a></li>
                         <li><a class="text-decoration-none" href="compras.html">Botas</a></li>
                         <li><a class="text-decoration-none" href="compras.html">Casuales</a></li>
