Actualización de imágenes en destacado y del mes

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="container">
                 <div class="row p-5">
                     <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                        <img class="img-fluid" src="assets/img/category_img_01.jpg" alt="">
+                        <img class="img-fluid" src="assets/img/clasico1.jpeg" alt="">
                     </div>
                     <div class="col-lg-6 mb-0 d-flex align-items-center">
                         <div class="text-align-left align-self-center">
@@ -148,7 +148,7 @@
             <div class="container">
                 <div class="row p-5">
                     <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                        <img class="img-fluid" src="assets/img/category_img_03.jpg" alt="">
+                        <img class="img-fluid" src="assets/img/sandalia1.jpeg" alt="">
                     </div>
                     <div class="col-lg-6 mb-0 d-flex align-items-center">
                         <div class="text-align-left">
@@ -167,7 +167,7 @@
             <div class="container">
                 <div class="row p-5">
                     <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                        <img class="img-fluid" src="assets/img/category_img_02.jpg" alt="">
+                        <img class="img-fluid" src="assets/img/tenis1.jpeg" alt="">
                     </div>
                     <div class="col-lg-6 mb-0 d-flex align-items-center">
                         <div class="text-align-left">
@@ -202,19 +202,19 @@
         </div>
         <div class="row">
             <div class="col-12 col-md-4 p-5 mt-3">
-                <a href="compras.html"><img src="assets/img/category_img_01.jpg" class="rounded-circle img-fluid border"> </a>
+                <a href="compras.html"><img src="assets/img/clasico1.jpeg" class="rounded-circle img-fluid border"> </a>
                 <h5 class="text-center mt-3 mb-3">Clasicos...</h5>
                 <p class="text-center"><a class="btn btn-success" href="compras.html">Ir a Comprar</a></p>
             </div>
         
             <div class="col-12 col-md-4 p-5 mt-3">
-                <a href="compras.html"><img src="assets/img/category_img_02.jpg" class="rounded-circle img-fluid border"> </a>
+                <a href="compras.html"><img src="assets/img/sandalia2.jpeg" class="rounded-circle img-fluid border"> </a>
                 <h5 class="text-center mt-3 mb-3">Sandalias...</h5>
                 <p class="text-center"><a class="btn btn-success" href="compras.html">Ir a Comprar</a></p>
             </div>
         
             <div class="col-12 col-md-4 p-5 mt-3">
-                <a href="compras.html"><img src="assets/img/category_img_03.jpg" class="rounded-circle img-fluid border"> </a>
+                <a href="compras.html"><img src="assets/img/tenis2.jpeg" class="rounded-circle img-fluid border"> </a>
                 <h5 class="text-center mt-3 mb-3">Deportivos...</h5>
                 <p class="text-center"><a class="btn btn-success" href="compras.html">Ir a Comprar</a></p>
             </div>
@@ -237,7 +237,7 @@
             <div class="col-12 col-md-4 mb-4">
                 <div class="card h-100">
                     <a href="compras.html">
-                        <img src="assets/img/feature_prod_01.jpg" class="card-img-top">
+                        <img src="assets/img/sandalia3.jpeg" class="card-img-top">
                     </a>
                     <div class="card-body">
                         <ul class="list-unstyled d-flex justify-content-between">
@@ -254,7 +254,7 @@
             <div class="col-12 col-md-4 mb-4">
                 <div class="card h-100">
                     <a href="compras.html">
-                        <img src="assets/img/feature_prod_02.jpg" class="card-img-top">
+                        <img src="assets/img/sandalia2.jpeg" class="card-img-top">
                     </a>
                     <div class="card-body">
                         <ul class="list-unstyled d-flex justify-content-between">
@@ -271,7 +271,7 @@
             <div class="col-12 col-md-4 mb-4">
                 <div class="card h-100">
                     <a href="compras.html">
-                        <img src="assets/img/feature_prod_01.jpg" class="card-img-top">
+                        <img src="assets/img/sandalia1.jpeg" class="card-img-top">
                     </a>
                     <div class="card-body">
                         <ul class="list-unstyled d-flex justify-content-between">
