Cambios en Acerca de

--- a/acercade.html
+++ b/acercade.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProdArt-A cerca de</title>
+    <title>ShoesStore-A cerca de</title>
     <!-- iconos-->
     <link rel="apple-touch-icon" href="assets/img/">
     <!-- css-->
@@ -19,9 +19,9 @@
                 <div class="w-100 d-flex justify-content-between">
                     <div>
                         <i class="fa fa-envelope mx-2"></i>
-                        <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:info@prodart.com">info@prodart.com</a>
+                        <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:info@prodart.com">info@shoesstore.com</a>
                         <i class="fa fa-phone mx-2"></i>
-                        <a class="navbar-sm-brand text-light text-decoration-none" href="tel: 057-320-202-02-02">057-320-202-02-02</a>
+                        <a class="navbar-sm-brand text-light text-decoration-none" href="tel: 057-322-815-08-24">057-322-815-08-24</a>
                     </div>
                     <div>
                         <a class="text-light" href="https://fb.com/templatemo" target="_blank" rel="sponsored"><i class="fab fa-facebook-f fa-sm fa-fw me-2"></i></a>
@@ -40,7 +40,7 @@
             </button>
             <div class="container d-flex justify-content-between align-items-center">
                 <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
-                    ProdArt
+                    ShoesStore
                 </a>
                 <div class="align-self-center collapse navbar-collapse flex-fill d-lg-flex justify-content-lg-between" id="opciones">
                     <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
@@ -72,28 +72,26 @@
                     <div class="col-md-8 text-white">
                         <h1>Quienes somos</h1>
                         <p>
-                        En ProdArt, somos un equipo apasionado por la artesanía y la cultura local. Nos dedicamos a conectar a artesanos talentosos con consumidores que valoran la calidad y la autenticidad. Nuestra plataforma ofrece una cuidada selección de productos artesanales, cada uno con una historia única y hecho a mano con dedicación y amor.
+                            Shoes Store es una tienda en línea dedicada a ofrecer una amplia variedad de calzado para todas las edades y estilos. Desde zapatos casuales hasta modelos deportivos y elegantes, nos enfocamos en combinar moda, comodidad y calidad. Con un diseño intuitivo y un servicio al cliente excepcional, Shoes Store está comprometida en brindar una experiencia de compra única para que encuentres el par perfecto para cada ocasión.
                         </p>
                         <h1>Misión</h1>
                         <p>
-                            Nuestra misión es promover el trabajo de artesanos locales y brindar a los consumidores acceso a productos auténticos y sostenibles. Creemos en el poder de la artesanía como una forma de preservar tradiciones y culturas, al tiempo que fomentamos un comercio justo y responsable.
+                            En Shoes Store, nuestra misión es ofrecer a nuestros clientes calzado de alta calidad que combine comodidad, estilo y durabilidad. Nos esforzamos por brindar una experiencia de compra excepcional a través de un catálogo diverso, precios competitivos y un servicio al cliente personalizado, contribuyendo a que cada paso de nuestros clientes sea seguro y con estilo.
 
                         </p>
                         <h1>Visión</h1>
                         <p>
-                            Aspiramos a ser la plataforma líder en el e-commerce de productos artesanales, reconocida por su compromiso con la sostenibilidad, la autenticidad y la promoción de comunidades creativas. Queremos ser el puente entre los creadores y los consumidores, creando un impacto positivo en las vidas de ambos.
+                            Ser la tienda de referencia para amantes del calzado en el mercado global, destacándonos por la innovación en tendencias, la sostenibilidad en nuestros procesos y el compromiso de hacer accesible el calzado perfecto para cada persona, sin importar dónde se encuentren.
                         </p>
                         <h1>Objetivos</h1>
                         <p>
-                            1. Apoyar a artesanos locales: Facilitar la comercialización de sus productos, brindando visibilidad y acceso a mercados más amplios.
-                            <br>2. Fomentar la sostenibilidad: Promover prácticas responsables en la producción y el consumo de productos artesanales.
-                            <br>3. Ofrecer una experiencia de compra única: Crear una plataforma fácil de usar que resalte la singularidad de cada producto y la historia detrás de él.
-                            <br>4. Educación y concienciación: Informar a los consumidores sobre la importancia de elegir productos artesanales y el impacto positivo que tienen en las comunidades.
-                            <br>5. Crecimiento continuo: Expandir nuestra oferta de productos y mejorar constantemente la experiencia del cliente a través de la innovación y la retroalimentación.
+                            1. Ofrecer a los clientes una experiencia de compra excepcional mediante una amplia gama de calzado de alta calidad, combinando comodidad, estilo y accesibilidad, mientras se fomenta la fidelización y el crecimiento sostenible del negocio.
+                            <br>2. Ampliar el alcance del mercado digital: incrementar la visibilidad de Shoes Store mediante estrategias efectivas de marketing digital y presencia en redes sociales, atrayendo a un público diverso y mejorando la experiencia de usuario en la plataforma.
+                            <br>3. Garantizar la satisfacción del cliente: Implementar políticas de atención personalizada, envío rápido y opciones de devolución sencillas para asegurar la confianza y satisfacción de los clientes en cada compra.
                         </p>
                     </div>
                     <div class="col-md-4">
-                        <img src="assets/img/logo.png">
+                        <img src="assets/img/Icon.webp">
                     </div>
 
                 </div>
@@ -114,32 +112,32 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 pt-5">
-                    <h2 class="h2 text-success border-bottom pb-3 border-light log">ProdArt</h2>
+                    <h2 class="h2 text-success border-bottom pb-3 border-light log">ShoesStore</h2>
                     <ul class="list-unstyled text-light footer-link-list">
                         <li>
                             <i class="fas fa-map-marker-alt fa-fw"></i>
-                            Local principal - Bogotá - Colombia
+                            Local principal - Santa Marta - Colombia
                         </li>
 
                         <li>
                             <i class="fa fa-phone fa-fw"></i>
-                            <a class="text-decoration-none" href="tel: 057-320-202-02-02">057-320-202-02-02</a>
+                            <a class="text-decoration-none" href="tel: 057-322-815-08-24">057-322-815-08-24</a>
                         </li>
                         <li>
                             <i class="fa fa-envelope mx-2"></i>
-                            <a class="text-decoration-none" href="mailto:info@prodart.com">info@prodart.com</a>
+                            <a class="text-decoration-none" href="mailto:info@prodart.com">info@shoesstore.com</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-4 pt-5">
                     <h2 class="h2 text-light border-bottom pb-3 border-light">Productos</h2>
                     <ul class="list-unstyled text-light footer-link-list">
-                        <li><a class="text-decoration-none" href="compras.html">Sombreros</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Hamacas</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Platería</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Bolsos</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Mochilas</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Tapetes</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Sandalias</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Clasicos</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Deportivos</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Tacones</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Botas</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Casuales</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 pt-5">
@@ -187,7 +185,7 @@
             <div class="container">
                 <div class="row pt-2">
                     <p class="text-left text-light">
-                        Copyright &copy; 2024 - ProdArt | Diseñado por: Pablo Carr
+                        Copyright &copy; 2024 - ShoesStore | Diseñado por: Luis Ospino
                     </p>
                 </div>
             </div>
