--- a/acercade.html
+++ b/acercade.html
@@ -91,7 +91,7 @@
                         </p>
                     </div>
                     <div class="col-md-4">
-                        <img src="assets/img/Icon.webp">
+                        <img src="assets/img/Icon.png">
                     </div>
 
                 </div>
