--- a/productos.html
+++ b/productos.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProdArt- Productos</title>
+    <title>ShoesStore- Productos</title>
     <!-- iconos-->
-    <link rel="apple-touch-icon" href="assets/img/">
+    <link rel="apple-touch-icon" href="assets/img/Icon.png">
     <!-- css-->
      <link rel="stylesheet" href="assets/css/bootstrap.min.css">
      <link rel="stylesheet" href="assets/css/templatemo.css">
@@ -19,9 +19,9 @@
                 <div class="w-100 d-flex justify-content-between">
                     <div>
                         <i class="fa fa-envelope mx-2"></i>
-                        <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:info@prodart.com">info@prodart.com</a>
+                        <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:info@shoesstore.com">info@shoesstore.com</a>
                         <i class="fa fa-phone mx-2"></i>
-                        <a class="navbar-sm-brand text-light text-decoration-none" href="tel: 057-320-202-02-02">057-320-202-02-02</a>
+                        <a class="navbar-sm-brand text-light text-decoration-none" href="tel: 057-322-815-08-24">057-322-815-08-24</a>
                     </div>
                     <div>
                         <a class="text-light" href="https://fb.com/templatemo" target="_blank" rel="sponsored"><i class="fab fa-facebook-f fa-sm fa-fw me-2"></i></a>
@@ -40,7 +40,7 @@
             </button>
             <div class="container d-flex justify-content-between align-items-center">
                 <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
-                    ProdArt
+                    ShoesStore
                 </a>
                 <div class="align-self-center collapse navbar-collapse flex-fill d-lg-flex justify-content-lg-between" id="opciones">
                     <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-lg-5 mt-5">
                     <div class="card mb-3">
-                        <img class="card-img img-fluid" src="assets/img/feature_prod_02.jpg">
+                        <img class="card-img img-fluid" src="assets/img/clasico4.jpeg">
                     </div>
                     <div class="row">
                         <div class="col-1 align-self-center">
@@ -86,17 +86,17 @@
                                     <div class="row">
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="assets/img/sombrero3.jpg">
+                                                <img class="card-img img-fluid" src="assets/img/clasico1.jpeg">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="assets/img/sombrero1.jpg">
+                                                <img class="card-img img-fluid" src="assets/img/clasico2.jpeg">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="assets/img/sombrero2.jpg">
+                                                <img class="card-img img-fluid" src="assets/img/tenis4.jpeg">
                                             </a>
                                         </div>
                                     </div>
@@ -115,31 +115,31 @@
                 <div class="col-lg-7 mt-5">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="h2">Sombrero vueltiao, hecho a mano...</h1>
-                            <p class="h3 py-2">$250.000</p>
+                            <h1 class="h2">calzado clasico, cómodo y elegante...</h1>
+                            <p class="h3 py-2">$190.000</p>
                             <p class="py-2">
                                 <i class="fa fa-star text-warning"></i>
                                 <i class="fa fa-star text-warning"></i>
                                 <i class="fa fa-star text-warning"></i>
                                 <i class="fa fa-star text-warning"></i>
                                 <i class="fa fa-star text-secondary"></i>
-                                <span class="list-inline-item text-dark">Rating 4.8 | 40 Comentarios</span>
+                                <span class="list-inline-item text-dark">Rating 4.5 | 35 Comentarios</span>
                             </p>
 
                             <h6>Descripción:</h6>
-                            <p>Hecho a mano</p>
+                            <p>capellada de cuero</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <h6>Color :</h6>
                                 </li>
                                 <li class="list-inline-item">
-                                    <p class="text-muted"><strong>Bandera de Colombia / Blanco-negro</strong></p>
+                                    <p class="text-muted"><strong>Negro</strong></p>
                                 </li>
                             </ul>
 
                             <h6>Especificacion:</h6>
                             <ul class="list-unstyled pb-3">
-                                <li>Hecho a mano</li>
+                                <li>Material 100% cuero</li>
 
                             </ul>
 
@@ -151,9 +151,9 @@
                                             <li class="list-inline-item">Tallas :
                                                 <input type="hidden" name="product-size" id="product-size" value="S">
                                             </li>
-                                            <li class="list-inline-item"><span class="btn btn-success btn-size">S</span></li>
-                                            <li class="list-inline-item"><span class="btn btn-success btn-size">M</span></li>
-                                            <li class="list-inline-item"><span class="btn btn-success btn-size">L</span></li>
+                                            <li class="list-inline-item"><span class="btn btn-success btn-size">39</span></li>
+                                            <li class="list-inline-item"><span class="btn btn-success btn-size">40</span></li>
+                                            <li class="list-inline-item"><span class="btn btn-success btn-size">42</span></li>
                                         </ul>
                                     </div>
                                     <div class="col-auto">
@@ -215,32 +215,32 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 pt-5">
-                    <h2 class="h2 text-success border-bottom pb-3 border-light log">ProdArt</h2>
+                    <h2 class="h2 text-success border-bottom pb-3 border-light log">ShoesStore</h2>
                     <ul class="list-unstyled text-light footer-link-list">
                         <li>
                             <i class="fas fa-map-marker-alt fa-fw"></i>
-                            Local principal - Bogotá - Colombia
+                            Local principal - Santa Marta - Colombia
                         </li>
 
                         <li>
                             <i class="fa fa-phone fa-fw"></i>
-                            <a class="text-decoration-none" href="tel: 057-320-202-02-02">057-320-202-02-02</a>
+                            <a class="text-decoration-none" href="tel: 057-322-815-08-24">057-322-815-08-24</a>
                         </li>
                         <li>
                             <i class="fa fa-envelope mx-2"></i>
-                            <a class="text-decoration-none" href="mailto:info@prodart.com">info@prodart.com</a>
+                            <a class="text-decoration-none" href="mailto:info@shoesstore.com">info@shoesstore.com</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-4 pt-5">
                     <h2 class="h2 text-light border-bottom pb-3 border-light">Productos</h2>
                     <ul class="list-unstyled text-light footer-link-list">
-                        <li><a class="text-decoration-none" href="compras.html">Sombreros</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Hamacas</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Platería</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Bolsos</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Mochilas</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Tapetes</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Sandalias</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Clasicos</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Deportivos</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Tacones</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Botas</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Casuales/a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 pt-5">
@@ -288,7 +288,7 @@
             <div class="container">
                 <div class="row pt-2">
                     <p class="text-left text-light">
-                        Copyright &copy; 2024 - ProdArt | Diseñado por: Pablo Carr
+                        Copyright &copy; 2024 - ShoesStore | Diseñado por: Luis Ospino
                     </p>
                 </div>
             </div>
