--- a/productos.html
+++ b/productos.html
@@ -133,7 +133,7 @@
                                     <h6>Color :</h6>
                                 </li>
                                 <li class="list-inline-item">
-                                    <p class="text-muted"><strong>Negro</strong></p>
+                                    <p class="text-muted"><strong>Marrón/Beige</strong></p>
                                 </li>
                             </ul>
 
