cambio en productos del footer

--- a/productos.html
+++ b/productos.html
@@ -240,7 +240,7 @@
                         <li><a class="text-decoration-none" href="compras.html">Deportivos</a></li>
                         <li><a class="text-decoration-none" href="compras.html">Tacones</a></li>
                         <li><a class="text-decoration-none" href="compras.html">Botas</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Casuales/a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Casuales</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 pt-5">
