--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProdArt- Contacto</title>
+    <title>ShoesStore- Contacto</title>
     <!-- iconos-->
     <link rel="apple-touch-icon" href="assets/img/">
     <!-- css-->
@@ -19,9 +19,9 @@
                 <div class="w-100 d-flex justify-content-between">
                     <div>
                         <i class="fa fa-envelope mx-2"></i>
-                        <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:info@prodart.com">info@prodart.com</a>
+                        <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:info@shoesstore.com">info@shoesstore.com</a>
                         <i class="fa fa-phone mx-2"></i>
-                        <a class="navbar-sm-brand text-light text-decoration-none" href="tel: 057-320-202-02-02">057-320-202-02-02</a>
+                        <a class="navbar-sm-brand text-light text-decoration-none" href="tel: 057-322-815-08-24">057-322-815-08-24</a>
                     </div>
                     <div>
                         <a class="text-light" href="https://fb.com/templatemo" target="_blank" rel="sponsored"><i class="fab fa-facebook-f fa-sm fa-fw me-2"></i></a>
@@ -40,7 +40,7 @@
             </button>
             <div class="container d-flex justify-content-between align-items-center">
                 <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
-                    ProdArt
+                    ShoesStore
                 </a>
                 <div class="align-self-center collapse navbar-collapse flex-fill d-lg-flex justify-content-lg-between" id="opciones">
                     <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
@@ -73,21 +73,21 @@
                 <ul class="list-unstyled text-light footer-link-list">
                     <li>
                         <i class="fas fa-map-marker-alt fa-fw"></i>
-                        Local principal - Bogotá - Colombia
+                        Local principal - Santa Marta - Colombia
                     </li>
 
                     <li>
                         <i class="fa fa-phone fa-fw"></i>
-                        <a class="text-decoration-none" href="tel: 057-320-202-02-02">057-320-202-02-02</a>
+                        <a class="text-decoration-none" href="tel: 057-322-815-08-24">057-322-815-08-24</a>
                     </li>
                     <li>
                         <i class="fa fa-envelope mx-2"></i>
-                        <a class="text-decoration-none" href="mailto:info@prodart.com">info@prodart.com</a>
+                        <a class="text-decoration-none" href="mailto:info@shoesstore.com">info@shoesstore.com</a>
                     </li>
                 </ul>
             
                 <!-- insertar mapa-->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7952.519277516678!2d-74.04437371283194!3d4.724902673421432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f855d7149daaf%3A0x62bb0234ea330481!2zQ2Vkcml0b3MsIFVzYXF1w6luLCBCb2dvdMOh!5e0!3m2!1ses!2sco!4v1730174778845!5m2!1ses!2sco" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/place/Santa+Marta,+Magdalena/@11.2353318,-74.1796518,15z/data=!4m6!3m5!1s0x8ef4f66ff59a173d:0x124b95fc153af9b8!8m2!3d11.2403547!4d-74.2110227!16zL20vMDJuc2xj?entry=ttu&g_ep=EgoyMDI0MTIwMy4wIKXMDSoASAFQAw%3D%3D" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             
             </div>
 
@@ -130,32 +130,32 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 pt-5">
-                    <h2 class="h2 text-success border-bottom pb-3 border-light log">ProdArt</h2>
+                    <h2 class="h2 text-success border-bottom pb-3 border-light log">ShoesStore</h2>
                     <ul class="list-unstyled text-light footer-link-list">
                         <li>
                             <i class="fas fa-map-marker-alt fa-fw"></i>
-                            Local principal - Bogotá - Colombia
+                            Local principal - Santa Marta - Colombia
                         </li>
 
                         <li>
                             <i class="fa fa-phone fa-fw"></i>
-                            <a class="text-decoration-none" href="tel: 057-320-202-02-02">057-320-202-02-02</a>
+                            <a class="text-decoration-none" href="tel: 057-322-815-08-24">057-322-815-08-24</a>
                         </li>
                         <li>
                             <i class="fa fa-envelope mx-2"></i>
-                            <a class="text-decoration-none" href="mailto:info@prodart.com">info@prodart.com</a>
+                            <a class="text-decoration-none" href="mailto:info@shoesstore.com">info@shoesstore.com</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-4 pt-5">
                     <h2 class="h2 text-light border-bottom pb-3 border-light">Productos</h2>
                     <ul class="list-unstyled text-light footer-link-list">
-                        <li><a class="text-decoration-none" href="compras.html">Sombreros</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Hamacas</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Platería</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Bolsos</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Mochilas</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Tapetes</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Sandalias</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Clasicos</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Deportivos</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Tacones</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Botas</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Casuales</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 pt-5">
@@ -203,7 +203,7 @@
             <div class="container">
                 <div class="row pt-2">
                     <p class="text-left text-light">
-                        Copyright &copy; 2024 - ProdArt | Diseñado por: Pablo Carr
+                        Copyright &copy; 2024 - ShoesStore | Diseñado por: Luis Ospino
                     </p>
                 </div>
             </div>
