--- a/contacto.html
+++ b/contacto.html
@@ -87,7 +87,7 @@
                 </ul>
             
                 <!-- insertar mapa-->
-            <iframe src="https://www.google.com/maps/place/Santa+Marta,+Magdalena/@11.2353318,-74.1796518,15z/data=!4m6!3m5!1s0x8ef4f66ff59a173d:0x124b95fc153af9b8!8m2!3d11.2403547!4d-74.2110227!16zL20vMDJuc2xj?entry=ttu&g_ep=EgoyMDI0MTIwMy4wIKXMDSoASAFQAw%3D%3D" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/place/Centro+Comercial+Buenavista/@11.2269836,-74.1752903,17z/data=!3m1!4b1!4m6!3m5!1s0x8ef4f5aafb987609:0x37f86444cb36dd88!8m2!3d11.2269783!4d-74.1727154!16s%2Fg%2F1thl6h9h?entry=ttu&g_ep=EgoyMDI0MTIwMy4wIKXMDSoASAFQAw%3D%3D" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             
             </div>
 
