--- a/contacto.html
+++ b/contacto.html
@@ -69,7 +69,7 @@
          <div class="container-fluid bg-light py-5">
             <div class="col-md-8 m-auto text-center">
                 <h1 class="h1">Contacto</h1>
-                <p>Aspiramos a ser la plataforma líder en el e-commerce de productos artesanales, reconocida por su compromiso con la sostenibilidad, la autenticidad y la promoción de comunidades creativas. Queremos ser el puente entre los creadores y los consumidores, creando un impacto positivo en las vidas de ambos.</p>
+                <p>Shoes Store está comprometida en brindar una experiencia de compra única para que encuentres el par perfecto para cada ocasión...</p>
                 <ul class="list-unstyled text-light footer-link-list">
                     <li>
                         <i class="fas fa-map-marker-alt fa-fw"></i>
@@ -87,7 +87,7 @@
                 </ul>
             
                 <!-- insertar mapa-->
-            <iframe src="https://www.google.com/maps/place/Centro+Comercial+Buenavista/@11.2269836,-74.1752903,17z/data=!3m1!4b1!4m6!3m5!1s0x8ef4f5aafb987609:0x37f86444cb36dd88!8m2!3d11.2269783!4d-74.1727154!16s%2Fg%2F1thl6h9h?entry=ttu&g_ep=EgoyMDI0MTIwMy4wIKXMDSoASAFQAw%3D%3D" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://maps.app.goo.gl/fV1YSKdCuYqgWsfF6" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             
             </div>
 
