--- a/contacto.html
+++ b/contacto.html
@@ -87,7 +87,7 @@
                 </ul>
             
                 <!-- insertar mapa-->
-            <iframe src="https://maps.app.goo.gl/fV1YSKdCuYqgWsfF6" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3917.2450272470946!2d-74.78607792578761!3d10.944854589214346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sco!4v1732676987384!5m2!1ses-419!2sco" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             
             </div>
 
