--- a/compras.html
+++ b/compras.html
@@ -19,7 +19,7 @@
                 <div class="w-100 d-flex justify-content-between">
                     <div>
                         <i class="fa fa-envelope mx-2"></i>
-                        <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:info@prodart.com">info@shoesstorecom</a>
+                        <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:info@shoesstore.com">info@shoesstorecom</a>
                         <i class="fa fa-phone mx-2"></i>
                         <a class="navbar-sm-brand text-light text-decoration-none" href="tel: 057-322-815-08-24">057-322-815-08-24</a>
                     </div>
