Actualización en div del contenido

--- a/compras.html
+++ b/compras.html
@@ -150,12 +150,12 @@
                     <div class="d-flex">
                         <select id="filtro" class="form-control">
                             <option value="todas">Todas</option>
-                            <option value="sombreros">Sandalias</option>
-                            <option value="mochilas">Clasicos</option>
-                            <option value="bolsos">Deportivos</option>
-                            <option value="hamacas">Tacones</option>
-                            <option value="plateria">Botas</option>
-                            <option value="tapetes">Casuales</option>
+                            <option value="sandalias">Sandalias</option>
+                            <option value="clasicos">Clasicos</option>
+                            <option value="deportivos">Deportivos</option>
+                            <option value="tacones">Tacones</option>
+                            <option value="botas">Botas</option>
+                            <option value="casuales">Casuales</option>
                             
                         </select>
                     </div>
