--- a/productos.html
+++ b/productos.html
@@ -197,6 +197,9 @@
                     <li class="page-item">
                         <a class="page-link active rounded-0 mr-3 shadow-sm border-top-0 border-left-0 text-dark" href="productos3.html">3</a>
                     </li>
+                    <li class="page-item">
+                        <a class="page-link active rounded-0 mr-3 shadow-sm border-top-0 border-left-0 text-dark" href="productos4.html">4</a>
+                    </li>
                 </ul>
             </div>
                 </div>
