Edición en el cuerpo de producto 4

--- a/productos4.html
+++ b/productos4.html
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-lg-5 mt-5">
                     <div class="card mb-3">
-                        <img class="card-img img-fluid" src="assets/img/tenis4.jpeg">
+                        <img class="card-img img-fluid" src="assets/img/tacon1.jpeg">
                     </div>
                     <div class="row">
                         <div class="col-1 align-self-center">
@@ -86,17 +86,17 @@
                                     <div class="row">
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="assets/img/tenis1.jpeg">
+                                                <img class="card-img img-fluid" src="assets/img/tacon2.jpeg">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="assets/img/tenis2.jpeg">
+                                                <img class="card-img img-fluid" src="assets/img/tacon3.jpeg">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="assets/img/tenis3.jpeg">
+                                                <img class="card-img img-fluid" src="assets/img/tacon4.jpeg">
                                             </a>
                                         </div>
                                     </div>
@@ -115,25 +115,25 @@
                 <div class="col-lg-7 mt-5">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="h2">Calzado deportivo / Hombres</h1>
-                            <p class="h3 py-2">$130.000</p>
+                            <h1 class="h2">Tacones para dama / Plateado</h1>
+                            <p class="h3 py-2">$129.990</p>
                             <p class="py-2">
                                 <i class="fa fa-star text-warning"></i>
                                 <i class="fa fa-star text-warning"></i>
                                 <i class="fa fa-star text-warning"></i>
                                 <i class="fa fa-star text-warning"></i>
                                 <i class="fa fa-star text-secondary"></i>
-                                <span class="list-inline-item text-dark">Rating 4.7 | 39 Comentarios</span>
+                                <span class="list-inline-item text-dark">Rating 4.8 | 45 Comentarios</span>
                             </p>
 
                             <h6>Descripción:</h6>
-                            <p>cuero sintético</p>
+                            <p>Sintético</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <h6>Color :</h6>
                                 </li>
                                 <li class="list-inline-item">
-                                    <p class="text-muted"><strong>Blanco/Negro</strong></p>
+                                    <p class="text-muted"><strong>Plateado</strong></p>
                                 </li>
                             </ul>
 
@@ -151,10 +151,10 @@
                                             <li class="list-inline-item">Tallas :
                                                 <input type="hidden" name="product-size" id="product-size" value="S">
                                             </li>
+                                            <li class="list-inline-item"><span class="btn btn-success btn-size">36</span></li>
                                             <li class="list-inline-item"><span class="btn btn-success btn-size">38</span></li>
                                             <li class="list-inline-item"><span class="btn btn-success btn-size">39</span></li>
                                             <li class="list-inline-item"><span class="btn btn-success btn-size">40</span></li>
-                                            <li class="list-inline-item"><span class="btn btn-success btn-size">42</span></li>
                                         </ul>
                                     </div>
                                     <div class="col-auto">
